# Compute-pi-on-RPI

./: .gitignore  CMakeLists.txt  README.md  computePi.hpp  main.cpp  mutex.cpp  mutex.hpp  pi.txt
src/: computePi.cpp  main.cpp
